--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,10 +4,14 @@ on:
   workflow-dispatch:
 
 jobs:
-  deploy:
+  tf-deploy:
     runs-on: ubuntu-latest
     name: Deploys to AWS S3
+    env:
+      TF_VAR_project: ${{ github.even.repository.name }}
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
       - name: Pickup AWS Creds and Terraform Role
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -17,4 +21,11 @@ jobs:
           role-to-assume: ${{ secrets.AWS_DEPLOYMENT_ROLE }}
           role-session-name: GitHubActions-${{ github.even.repository.name }}
           role-duration-seconds: 3600
-
+      - name: terraform init
+        run: |
+          terraform init -backend-config="bucket=efairgrieve-terraform-states" -backend-config="key=${{ github.even.repository.name }}-state" 
+      - name: terraform plan
+        run: |
+          terraform plan -out=plan.output
+      # - name: terraform apply
+      #   run: terraform apply -auto-approve -input=false plan.output
