--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploys to AWS S3
     env:
-      TF_VAR_project: ${{ github.even.repository.name }}
+      TF_VAR_project: ${{ github.event.repository.name }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -21,7 +21,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
           role-to-assume: ${{ secrets.AWS_DEPLOYMENT_ROLE }}
-          role-session-name: GitHubActions-${{ github.even.repository.name }}
+          role-session-name: GitHubActions-${{ github.event.repository.name }}
           role-duration-seconds: 3600
       - name: terraform init
         run: |
