This shits a mess but I just want to see what the environment input looks like on workflow dispatch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,9 @@ jobs:
   tf-deploy:
     runs-on: ubuntu-latest
     name: Deploys to AWS S3
+    environment: DEV
     env:
+      TF_VAR_env: dev
       TF_VAR_project: ${{ github.event.repository.name }}
     steps:
       - name: Checkout repo
