A complete mess again...

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,12 +6,12 @@ on:
       - main
 
 jobs:
-  tf-deploy:
+  dev-tf-deploy:
     runs-on: ubuntu-latest
-    name: Deploys to AWS S3
+    name: DEV Deploys to AWS S3
     environment: DEV
     env:
-      TF_VAR_env: dev
+      TF_VAR_env: ${{ lower(github.event.inputs.environment) }}
       TF_VAR_project: ${{ github.event.repository.name }}
     steps:
       - name: Checkout repo
@@ -27,7 +27,35 @@ jobs:
           role-duration-seconds: 3600
       - name: terraform init
         run: |
-          terraform init -backend-config="bucket=efairgrieve-terraform-states" -backend-config="key=${{ github.event.repository.name }}-state" 
+          terraform init -backend-config="bucket=efairgrieve-terraform-states" -backend-config="key=${{ env.TF_VAR_env }}-${{ github.event.repository.name }}-state" 
+      - name: terraform plan
+        run: |
+          terraform plan -out=plan.output
+      - name: terraform apply
+        run: terraform apply -auto-approve -input=false plan.output
+
+  sit-tf-deploy:
+    runs-on: ubuntu-latest
+    name: SIT Deploys to AWS S3
+    environment: SIT
+    env:
+      TF_VAR_env: sit
+      TF_VAR_project: ${{ github.event.repository.name }}
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Pickup AWS Creds and Terraform Role
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+          role-to-assume: ${{ secrets.AWS_DEPLOYMENT_ROLE }}
+          role-session-name: GitHubActions-${{ env.TF_VAR_env }}-${{ github.event.repository.name }}
+          role-duration-seconds: 3600
+      - name: terraform init
+        run: |
+          terraform init -backend-config="bucket=efairgrieve-terraform-states" -backend-config="key=${{ env.TF_VAR_env }}-${{ github.event.repository.name }}-state" 
       - name: terraform plan
         run: |
           terraform plan -out=plan.output
