--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -18,6 +18,7 @@ jobs:
     name: Tearing Down the Infrastructure
     environment: ${{ github.event.inputs.environment }}
     env:
+      TF_VAR_env: ${{ lower(github.event.inputs.environment) }}
       TF_VAR_project: ${{ github.event.repository.name }}
     steps:
       - name: Checkout repo
@@ -33,7 +34,7 @@ jobs:
           role-duration-seconds: 3600
       - name: terraform init
         run: |
-          terraform init -backend-config="bucket=efairgrieve-terraform-states" -backend-config="key=${{ github.event.repository.name }}-state" 
+          terraform init -backend-config="bucket=efairgrieve-terraform-states" -backend-config="key=${{ env.TF_VAR_env }}-${{ github.event.repository.name }}-state" 
       - name: terraform plan
         run: |
           terraform plan -out=plan.output -destroy
