Walnut brain mistyped the env var call

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Set Terraform env variable
         run: |
-          echo "TF_VAR_env=${env.upper,,}" >> ${GITHUB_ENV}
+          echo "TF_VAR_env=${env.env_upper,,}" >> ${GITHUB_ENV}
       - name: Pickup AWS Creds and Terraform Role
         uses: aws-actions/configure-aws-credentials@v1
         with:
