--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           TF_env_upper="${{ env.environment_upper }}"
           echo "TF_VAR_env=${TF_env_upper,,}" >> ${GITHUB_ENV}
+          echo $TF_VAR_env
       - name: Pickup AWS Creds and Terraform Role
         uses: aws-actions/configure-aws-credentials@v1
         with:
