Changed the if conditional logic

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,11 @@ on:
 
 jobs:
   dev-tf-deploy:
-    if: ${{ github.event.inputs.env_filter == 'DEV' }}
+    if: |
+      github.event.inputs.env_filter == 'DEV' ||
+      github.event.inputs.env_filter == 'SIT' ||
+      github.event.inputs.env_filter == 'PRE_PROD' ||
+      github.event.inputs.env_filter == 'PROD'
     runs-on: ubuntu-latest
     name: DEV Deploys to AWS S3
     environment: DEV
@@ -47,7 +51,10 @@ jobs:
         run: terraform apply -auto-approve -input=false plan.output
 
   sit-tf-deploy:
-    if: ${{ github.event.inputs.env_filter == 'SIT' }}
+    if: |
+      github.event.inputs.env_filter == 'SIT' ||
+      github.event.inputs.env_filter == 'PRE_PROD' ||
+      github.event.inputs.env_filter == 'PROD'
     needs: [dev-tf-deploy]
     runs-on: ubuntu-latest
     name: SIT Deploys to AWS S3
