--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,17 @@ on:
 
 
 jobs:
+  pre-run-info:
+    runs-on: ubuntu-latest
+    name: Pre-run info
+    steps:
+      - name: Branch and Event for now
+        run: |
+          echo "Running on branch: ${{ github.ref }}"
+
   dev-tf-deploy:
     if: contains(fromJson('["DEV", "SIT", "PRE_PROD", "PROD"]'), github.event.inputs.env_filter)
+    needs: [pre-run-info]
     runs-on: ubuntu-latest
     name: DEV Deploys to AWS S3
     environment: DEV
